feat:  user story user attempts to join lobby with active game (#82)
* feat: added locking of lobbies

* feat: see lobbies no longer returns locked lobbies