@@ -79,6 +79,9 @@
         <version>3.11.0</version>
         <configuration>
           <release>${java.version}</release>
+            <source>23</source>
+            <target>23</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
